# cairo-profiler

./: .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  trace.json
.cargo/: config.toml
.github/: dependabot.yml  (+1 more)
crates/cairo-profiler/: Cargo.toml  build.rs
crates/cairo-profiler/resources/: versioned_constants_0_13_2_1.json  versioned_constants_0_13_3.json  versioned_constants_0_13_4.json  versioned_constants_0_13_5.json  versioned_constants_0_14_1.json
crates/cairo-profiler/src/: cli.rs  main.rs  profile_builder.rs  profile_viewer.rs  profiler_config.rs  sierra_loader.rs  trace_reader.rs  ui.rs  versioned_constants_reader.rs
crates/cairo-profiler/src/cli/: build_profile.rs  mod.rs  view.rs
crates/cairo-profiler/src/trace_reader/: function_name.rs  function_stack_trace.rs  function_trace_builder.rs  functions.rs  sample.rs  syscall.rs
crates/cairo-profiler/src/trace_reader/function_trace_builder/: cost.rs  function_call_trace.rs  function_stack_trace.rs  inlining.rs  stack_trace.rs  syscall_trace.rs
crates/cairo-profiler/tests/: e2e.rs
crates/cairo-profiler/tests/contracts/balance/precompiled/: trace_balance_simple.json
crates/cairo-profiler/tests/contracts/balance_simple/: Scarb.toml
crates/cairo-profiler/tests/contracts/balance_simple/precompiled/: README.md  trace_balance_simple.json
crates/cairo-profiler/tests/contracts/balance_simple/precompiled_cairo_steps/: README.md  balance_simple_integrationtest.test.sierra.json  balance_simple_integrationtest_HelloStarknet.test.contract_class.json  trace_balance_simple.json  trace_balance_simple_fork.json
crates/cairo-profiler/tests/contracts/balance_simple/precompiled_sierra_gas/: README.md  balance_simple_integrationtest.test.sierra.json  balance_simple_integrationtest_HelloStarknet.test.contract_class.json  trace_balance_simple.json  trace_balance_simple_fork.json
crates/cairo-profiler/tests/contracts/balance_simple/src/: lib.cairo
crates/cairo-profiler/tests/contracts/balance_simple/tests/: test_contract.cairo
crates/cairo-profiler/tests/contracts/builtins_simple/: .tool-versions  Scarb.toml
crates/cairo-profiler/tests/contracts/builtins_simple/precompiled/: README.md  builtins_simple_tests_bitwise_cost.json  builtins_simple_tests_ec_op_cost.json  builtins_simple_tests_pedersen_cost.json  builtins_simple_tests_poseidon_cost.json  builtins_simple_tests_range_check_cost.json  builtins_simple_unittest.test.sierra.json
crates/cairo-profiler/tests/contracts/builtins_simple/src/: lib.cairo
crates/cairo-profiler/tests/contracts/deploy_syscall_simple/: Scarb.toml
crates/cairo-profiler/tests/contracts/deploy_syscall_simple/precompiled/: README.md  deploy_syscall_simple_deploy_syscall_cost.json  deploy_syscall_simple_unittest.test.sierra.json  deploy_syscall_simple_unittest_GasConstructorChecker.test.contract_class.json
crates/cairo-profiler/tests/contracts/deploy_syscall_simple/src/: lib.cairo
crates/cairo-profiler/tests/contracts/l2_gas/: README.md  Scarb.toml
crates/cairo-profiler/tests/contracts/l2_gas/precompiled_cairo_steps/: l2_verification_integrationtest.test.sierra.json  l2_verification_integrationtest_ERC20.test.contract_class.json  l2_verification_integrationtest_test_l2_with_signature.json  l2_verification_integrationtest_test_l2_without_signature.json
crates/cairo-profiler/tests/contracts/l2_gas/precompiled_sierra_gas/: l2_verification_integrationtest.test.sierra.json  l2_verification_integrationtest_test_l2_with_signature.json  l2_verification_integrationtest_test_l2_without_signature.json
crates/cairo-profiler/tests/contracts/l2_gas/tests/: test_l2.cairo
crates/cairo-profiler/tests/contracts/other_syscalls/: Scarb.toml
crates/cairo-profiler/tests/contracts/other_syscalls/precompiled/: README.md  other_syscalls_integrationtest.test.sierra.json  other_syscalls_integrationtest_SyscallProxy.test.contract_class.json  trace_other_syscalls.json
crates/cairo-profiler/tests/contracts/other_syscalls/src/: lib.cairo
crates/cairo-profiler/tests/contracts/other_syscalls/tests/: test_contract.cairo
crates/cairo-profiler/tests/contracts/scaled_syscall/: README.md  Scarb.toml
crates/cairo-profiler/tests/contracts/scaled_syscall/precompiled/: scaled_syscall_deploy_syscall_cost.json  scaled_syscall_deploy_syscall_cost_but_different.json  scaled_syscall_test_increase_balance.json  scaled_syscall_unittest.test.sierra.json  scaled_syscall_unittest_GasConstructorChecker.test.contract_class.json  scaled_syscall_unittest_GasConstructorCheckerButDifferent.test.contract_class.json
crates/cairo-profiler/tests/contracts/scaled_syscall/src/: lib.cairo
crates/cairo-profiler/tests/contracts/sha_hashes/: Scarb.toml
crates/cairo-profiler/tests/contracts/sha_hashes/precompiled/: README.md  sha_hashes_integrationtest.test.sierra.json  sha_hashes_integrationtest_ShaHashes.test.contract_class.json  trace_sha384.json  trace_sha_hashes.json  trace_sha_hashes_multi_call.json  trace_sha_hashes_sierra_gas.json
crates/cairo-profiler/tests/contracts/sha_hashes/src/: lib.cairo
crates/cairo-profiler/tests/contracts/tree_verification/: README.md  Scarb.toml
crates/cairo-profiler/tests/data/: call.json  deploy.json  invalid_versioned_constants.json  l1_handler.json  missing_syscall_versioned_constants.json  test_versioned_constants.json  trace.json  trace_resources_Tests.sierra.json  trace_resources_TraceDummy.contract_class.json  trace_resources_TraceInfoChecker.contract_class.json  trace_resources_TraceInfoProxy.contract_class.json
crates/cairo-profiler/tests/executable_programs/multiple_targets/: Scarb.toml
crates/cairo-profiler/tests/executable_programs/simple_nameless/: Scarb.toml
crates/profiler/: Cargo.toml
crates/profiler/src/: main.rs  profile_builder.rs  trace_reader.rs
crates/profiler/tests/: e2e.rs
crates/profiler/tests/data/: deploy.json  l1_handler.json
profiler/: Cargo.toml  build.rs
profiler/.cargo/: config.toml
profiler/src/: main.rs  profile_builder.rs  trace_data.rs  trace_reader.rs
profiler/tests/: e2e.rs
profiler/tests/data/: trace.json
src/: lib.rs  (+4 more)
(+47 files in other folders)
