[workspace]
resolver = "2"
members = [
    "crates/cairo-profiler",
]

[workspace.package]
version = "0.14.0"
edition = "2024"


[workspace.dependencies]
prost = "0.14"
# Only necessary if using Protobuf well-known types:
prost-types = "0.14"
bytes = "1.10.1"
flate2 = "1.1.4"
clap = { version = "4.5.49", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
camino = { version = "1.2.1", features = ["serde1"] }
anyhow = "1.0"
assert_fs = "1.1.3"
project-root = "0.2.2"
snapbox = "0.6.21"
prost-build = { version = "0.14" }
test-case = "3.3.1"
itertools = "0.14.0"
indoc = "2"
cairo-annotations = "0.7.0"
prettytable-rs = "0.10.0"
regex = "1.12.2"
console = "0.16.1"
num-rational = "0.4.2"

cairo-lang-sierra = "2.12.0"
cairo-lang-sierra-to-casm = "2.12.0"
cairo-lang-starknet-classes = "2.12.0"
cairo-lang-sierra-gas = "2.12.0"
cairo-lang-sierra-type-size = "2.12.0"
cairo-lang-sierra-ap-change = "2.12.0"
cairo-lang-utils = "2.12.0"
