[package]
name = "profiler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.12"
# Only necessary if using Protobuf well-known types:
prost-types = "0.12"
bytes = "1.5.0"
flate2 = "1.0.28"

[build-dependencies]
prost-build = { version = "0.12" }
