[package]
name = "cairo-profiler"
version.workspace = true
edition.workspace = true

[package.metadata]
include = ["resources/*"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost.workspace = true
prost-types.workspace = true
bytes.workspace = true
flate2.workspace = true
hex.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
camino.workspace = true
anyhow.workspace = true
itertools.workspace = true
tempfile.workspace = true
cairo-annotations.workspace = true
prettytable-rs.workspace = true

cairo-lang-sierra.workspace = true
cairo-lang-sierra-to-casm.workspace = true
cairo-lang-starknet-classes.workspace = true

[dev-dependencies]
assert_fs.workspace = true
project-root.workspace = true
snapbox.workspace = true
test-case.workspace = true
indoc.workspace = true

[build-dependencies]
prost-build.workspace = true

[[bin]]
name = "cairo-profiler"
path = "src/main.rs"
