[package]
name = "cairo-profiler"
version.workspace = true
edition.workspace = true

[package.metadata]
include = ["resources/*"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost.workspace = true
bytes.workspace = true
flate2.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
camino.workspace = true
anyhow.workspace = true
itertools.workspace = true
indoc.workspace = true
cairo-annotations.workspace = true
prettytable-rs.workspace = true
regex.workspace = true
console.workspace = true

cairo-lang-sierra.workspace = true
cairo-lang-sierra-to-casm.workspace = true
cairo-lang-starknet-classes.workspace = true
cairo-lang-sierra-gas.workspace = true
cairo-lang-sierra-type-size.workspace = true
cairo-lang-sierra-ap-change.workspace = true
cairo-lang-utils.workspace = true
num-rational = { workspace = true, features = ["serde"] }

[dev-dependencies]
assert_fs.workspace = true
project-root.workspace = true
snapbox.workspace = true
test-case.workspace = true

[build-dependencies]
prost-build.workspace = true

[[bin]]
name = "cairo-profiler"
path = "src/main.rs"
